--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "AwesomeProject",
+  "name": "awesome-project",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
-    "lint": "eslint .",
+    "lint": "eslint ./src --ext .ts,.tsx",
+    "lint:fix": "eslint  ./src --ext .ts,.tsx --fix",
     "start": "react-native start",
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/native": "^7.0.14",
+    "@react-navigation/stack": "^7.1.1",
+    "axios": "^1.7.9",
     "react": "19.0.0",
-    "react-native": "0.78.0"
+    "react-native": "0.78.0",
+    "react-native-gesture-handler": "^2.24.0",
+    "react-native-safe-area-context": "^5.2.0",
+    "react-promise-tracker": "^2.1.1",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
